rtl: fix alignment of buttons #1039

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -959,12 +959,6 @@ pre:not(.mermaid) {
   position: relative;
 }
 
-div.highlight {
-  /* even in RTL languages code is supposed to be LTR */
-  direction: ltr;
-  text-align: left;
-}
-
 pre:not(.mermaid) code {
   background-color: inherit;
   border: 0;
@@ -1463,7 +1457,7 @@ code.copy-to-clipboard-code:has(+ .inline-copy-to-clipboard-button):after {
   display: none;
   padding: 5px 3px;
   position: absolute;
-  right: 4px;
+  inset-inline-end: 4px;
   top: 4px;
 }
 @media (any-hover: none) {
@@ -1608,7 +1602,7 @@ html[dir='rtl'] .expand[open] > .box-label > i.expander-icon {
   line-height: 1.15;
   padding: 5px 3px;
   position: absolute;
-  right: 4px;
+  inset-inline-end: 4px;
   top: 4px;
 }
 .svg-reset-button:hover {
